Copied over BROWSE button behaviour from MASTER branch

--- a/driveshare.kv
+++ b/driveshare.kv
@@ -126,6 +126,30 @@
 		x: self.parent.x + self.parent.width -19
 		size: 8, 8
 
+<FileSelectDialog>:
+	text_input: text_input
+	BoxLayout:
+		size: root.size
+		pos: root.pos
+		orientation: "vertical"
+		FileChooserListView:
+			id: filechooser
+			on_selection: text_input.text = self.selection and self.selection[0] or ''
+		TextInput:
+			id: text_input
+			size_hint_y: None
+			height: 30
+			multiline: False
+		BoxLayout:
+			size_hint_y: None
+			height: 30
+			Button:
+				text: "Cancel"
+				on_release: root.cancel()
+			Button:
+				text: "Select"
+				on_release: root.select(filechooser.path, text_input.text)
+
 <MainScreen@Screen>:
 	name: 'main'
 	ScreenLayout:
@@ -293,6 +317,7 @@
 						BoxLayout:
 							WhiteButton:
 								text: 'BROWSE'
+								on_release: app.show_fileselect()
 				InputGroup:
 					AlignedThickLabel:
 						text: 'SJCX Payout Address'
