--- a/driveshare.kv
+++ b/driveshare.kv
@@ -174,6 +174,23 @@
 			pos: root.pos
 			size: root.size
 
+<NodeDropDown>:
+	DropDownBackground:
+		size_hint_y: None
+		height: len(nodeDropDownContainer.children) * fieldheight
+		ElementLayout:
+			id: nodeDropDownContainer
+			orientation: 'vertical'
+			DropDownListButton:
+				text: 'node1.metadisk.org'
+				on_release: root.dismiss(); app.inputstate_node = self.text
+			DropDownListButton:
+				text: 'node2.metadisk.org'
+				on_release: root.dismiss(); app.inputstate_node = self.text
+			DropDownListButton:
+				text: 'node3.metadisk.org'
+				on_release: root.dismiss(); app.inputstate_node = self.text
+
 <DenominatorDropDown>:
 	DropDownBackground:
 		size_hint_y: None
@@ -185,34 +202,17 @@
 				text: 'MB'
 				font_size: '12sp'
 				padding_x: -5
-				on_release: root.dismiss(); app.denominator = self.text
+				on_release: root.dismiss(); app.inputstate_denominator = self.text
 			DropDownListButton:
 				text: 'GB'
 				font_size: '12sp'
 				padding_x: -5
-				on_release: root.dismiss(); app.denominator = self.text
+				on_release: root.dismiss(); app.inputstate_denominator = self.text
 			DropDownListButton:
 				text: 'TB'
 				font_size: '12sp'
 				padding_x: -5
-				on_release: root.dismiss(); app.denominator = self.text
-
-<NodeDropDown>:
-	DropDownBackground:
-		size_hint_y: None
-		height: len(nodeDropDownContainer.children) * fieldheight
-		ElementLayout:
-			id: nodeDropDownContainer
-			orientation: 'vertical'
-			DropDownListButton:
-				text: 'node1.metadisk.org'
-				on_release: root.dismiss(); app.node = self.text
-			DropDownListButton:
-				text: 'node2.metadisk.org'
-				on_release: root.dismiss(); app.node = self.text
-			DropDownListButton:
-				text: 'node3.metadisk.org'
-				on_release: root.dismiss(); app.node = self.text
+				on_release: root.dismiss(); app.inputstate_denominator = self.text
 
 <SJCXAddressDropDown>:
 	DropDownBackground:
@@ -224,11 +224,11 @@
 			DropDownListButton:
 				text: '1C5Ch7vrtGvAyGFbqZM3RFH3koHjse14a7'
 				font_size: '9sp'
-				on_release: root.dismiss(); app.sjcxaddress = self.text
+				on_release: root.dismiss(); app.inputstate_sjcxaddress = self.text
 			DropDownListButton:
 				text: '1D9FHfug2mQ4pgiKbwEVoHfAbgxi9xsGPQ'
 				font_size: '9sp'
-				on_release: root.dismiss(); app.sjcxaddress = self.text
+				on_release: root.dismiss(); app.inputstate_sjcxaddress = self.text
 
 <MainScreen@Screen>:
 	name: 'main'
@@ -297,14 +297,14 @@
 					text: 'Storage Space'
 					y: int(self.parent.height/2) + 17
 				RelThickLabel:
-					text: '58 %'
+					text: str(round(app.used_storage/app.allocated_space*100)) + ' %'
 					y: int(self.parent.height/2) + 17
 					right: self.parent.width
 				RelThinLabel:
 					text: '0'
 					y: int(self.parent.height/2) - 33
 				RelThinLabel:
-					text: '100 GB'
+					text: str(app.allocated_space) + ' ' + app.denominator
 					y: int(self.parent.height/2) - 33
 					right: self.parent.width
 		BoxLayout:
@@ -334,7 +334,7 @@
 					LabelTypeUpper:
 						text: 'TOTAL'
 					LabelTypeLower:
-						text: '100 GB'
+						text: str(app.allocated_space) + ' ' + app.denominator
 		NavButtonContainer:
 			NavButton:
 				text: 'SETTINGS'
@@ -374,7 +374,8 @@
 						text: 'Node'
 					BoxLayout:
 						SettingsInput:
-							text: app.node
+							text: app.inputstate_node
+							on_text: app.inputstate_node = self.text
 						DropDownButton:
 							on_release: app.nodedropdown.open_drop(self.parent)
 				BoxLayout:
@@ -384,10 +385,11 @@
 							text: 'Allocate Space'
 						BoxLayout:
 							SettingsInput:
-								text: '20'
+								text: app.inputstate_allocated_space
+								on_text: app.inputstate_allocated_space = self.text
 							DropDownButton:
 								font_name: './fonts/Lato-Regular.ttf'
-								text: app.denominator
+								text: app.inputstate_denominator
 								color: DARK_BLUE
 								width: 50
 								halign: 'left'
@@ -408,7 +410,8 @@
 						text: 'SJCX Payout Address'
 					BoxLayout:
 						SettingsInput:
-							text: app.sjcxaddress
+							text: app.inputstate_sjcxaddress
+							on_text: app.inputstate_sjcxaddress = self.text
 							font_size: '9sp'
 							padding: 12, 6, 0, 0
 						DropDownButton:
@@ -417,11 +420,11 @@
 			NavButton:
 				text: 'CANCEL'
 				background_color: BLUE
-				on_release: root.manager.current = 'main' #placeholder, needs proper callback to discard settings
+				on_release: app.settings_cancel(); root.manager.current = 'main'
 			NavButton:
 				text: 'SAVE'
 				background_color: GREEN
-				on_release: root.manager.current = 'main' #placeholder, needs proper callback to save and use settings
+				on_release: app.settings_save(); root.manager.current = 'main'
 
 
 # Root Widget
